<resources>
    <string name="app_name">ROM Settings</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Statusbar</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="title_ribbon">Ribbon Options</string>
    <string name="power_menu">Power Menu</string>
    <string name="pie">PIE™</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen Options</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="performance">Performance</string>
    <string name="xposed_settings_title">Xposed</string>
    <string name="Extras">Extras</string>
    <string name="category_toggles">Toggles</string>
    <string name="category_statusbar">Statusbar</string>
    <string name="category_statusbar_notification">Notifications</string>
    <string name="category_statusbar_battery">Battery</string>
    <string name="category_navring">Navigation Ring</string>
    <string name="category_lockscreen">Lockscreen</string>
    <string name="category_animations">Animations</string>
    <string name="category_power_menu">Power Menu</string>
    <string name="category_misc">Miscellaneous</string>
    <string name="category_sound">Sound</string>
    <string name="category_ribbons">Ribbons</string>
    <string name="title_about">About XenonHD</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_pie">PIE™</string>
    <string name="title_led">LED Control</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_styles">Lockscreen Styles</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="ribbon_settings_title">Ribbon options</string>
    <string name="active_display_settings">Active display</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_pie">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="header_summary_animations">@null</string>
    <string name="xposed_settings_title_menu">@null</string>
	<string name="ribbon_settings_summary">@null</string>
    <string name="header_summary_adsiplay">@null</string>
    <string name="menu_user_interface_reset">Reset SystemUI</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_apps">Reset apps</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_hide">Hide apps</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_na">Not available</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available for the left and right swipe ribbons.</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="recent_short">Recent Apps Panel</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="profiles_add">Add</string>
    <string name="default_string">Default</string>
    <string name="reset">Reset</string>
    <string name="airplane_mode_options">Airplane mode</string>
    <string name="immersive_mode_options">Immersive mode</string>
    <string name="reboot_options">Reboot</string>
    <string name="screenshot_mode_options">Screenshot</string>
    <string name="power_menu_screenrecord_title">ScreenRecord</string>
    <string name="hide_option">Hide option</string>
    <string name="on_always">Show option</string>
    <string name="on_when_insecure">Show option (except on secure lockscreen)</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on long press</string>
    <string name="devs">Team</string>
    <string name="aokp">Team Horizon</string>
    <string name="aokp_website_title">Website</string>
    <string name="aokp_website_summary">@null</string>
    <string name="aokp_source_title">Source</string>
    <string name="aokp_source_summary">You can always check out the latest source at github.com/teamhorizon</string>
    <string name="about_xehd">About XenonHD</string>
    <string name="about_xehd_summary">@null</string>
    <string name="donate">https://play.google.com/store/apps/details?id=com.th.xenonhdsupport</string>
    <string name="notification_cat">Notification</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="ram_bar_title">Recents RAM bar</string>
    <string name="ram_bar_summary">Shows RAM usage in the recent apps window</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">Allows you to slide your finger along the top of the statusbar to change the brightness. Does nothing when autobrightness is enabled.</string>
    <string name="screen_off_animation">Screen-off animation</string>
    <string name="lcd_density_title">LCD Density</string>
    <string name="toggles_per_row_title">Toggles per row</string>
    <string name="toggles_style_title">Toggles style</string>
    <string name="toggles_order_title">Toggle order</string>
    <string name="toggles_order_summary">Choose the order which your toggles are displayed</string>
    <string name="toggle_dialog_arrange_title">Toggle setup</string>
    <string name="toggle_dialog_add_toggles">Add a toggle</string>
    <string name="category_signalbars">Signal Bars</string>
    <string name="statusbar_signal_text_title">Show signal text</string>
    <string name="statusbar_signal_text_summary">Show signal with dBm</string>
    <string name="interface_navring_settings_title">Navigation Ring</string>
    <string name="interface_navring_settings_summary">@null</string>
    <string name="interface_ribbon_settings_summary">@null</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="battery_light_title">Battery light</string>
    <string name="safe_headset_volume_title">Safe headset volume</string>
    <string name="safe_headset_volume_summary">Whether safe headset volume warning is shown</string>
    <string name="lock_widgets_short">Lockscreen Widgets</string>
    <string name="lockscreen_security_cat">Security</string>
    <string name="lockscreen_layout_cat">Layout</string>
    <string name="lockscreen_quick_unlock_control_title">Quick pin unlock</string>
    <string name="lockscreen_quick_unlock_control_summary">Unlock password/pin lockscreen without pressing enter button</string>
    <string name="lockscreen_auto_rotate_title">Allow lockscreen rotation</string>
    <string name="lockscreen_auto_rotate_summary">Lockscreen will have ability to rotate via device orientation. This is independent of Auto-rotation in display</string>
    <string name="lockscreen_all_widgets_title">Allow all widgets</string>
    <string name="lockscreen_all_widgets_summary">*Warning* Some widgets are not intended to be used on the lockscreen, The widget maker and TH are not responsible for your choice of lockscreen widgets. Choose responsibly.</string>
    <string name="lockscreen_unlimited_widgets_title">Allow unlimited widgets</string>
    <string name="lockscreen_unlimited_widgets_summary">*Warning* Adding too many widgets can cause lag issues with lockscreen.</string>
    <string name="lockscreen_battery_title">Lockscreen battery percentage</string>
    <string name="lockscreen_battery_summary">Always show battery percentage on the lockscreen</string>
    <string name="lockscreen_text_color_title">Lockscreen text color</string>
    <string name="lockscreen_target_title">Slider shortcuts</string>
    <string name="lockscreen_target_summary">View or change custom lock screen shortcuts</string>
    <string name="vibrations">Vibrations</string>
    <string name="battery_percentage_indicator_title">Show battery percentage indicator</string>
    <string name="battery_percentage_indicator_summary">Show battery percentage indicator front of battery icon</string>
    <string name="battery_percentage_indicator_plugged_title">Indicate charging</string>
    <string name="battery_percentage_indicator_plugged_summary">Show battery percentage indicator in different color during charging</string>
    <string name="ps_init_d">@null</string>
    <string name="propmodder_title">PropModder</string>
    <string name="propmodder_title_summary">@null</string>
    <string name="pt_init_d">System Tweaks</string>
    <string name="pref_low_battery_warning_policy_title">Low battery warning</string>
    <string name="pref_low_battery_warning_policy_dialog_title">Indicate low battery warning with:</string>
    <string name="keyboard_title">Keyboard</string>
     <string name="battery_status_icon_title">Status icon</string>
    <string name="wakelock_blocker">Wakelock Blocker</string>
    <string name="halo_settings_title">Halo</string>
    <string name="quicksettings_tiles_style_additional_options">QuickSettings options</string>
    <string name="quick_tiles_per_row_duplicate_landscape_title">Scale landscape quantity</string>
    <string name="quick_tiles_per_row_duplicate_landscape_summary">Landscape view doubles tiles per row quantity</string>
</resources>