<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header android:title="@string/user_interface" />

    <header
        android:id="@+id/user_interface"
        android:fragment="com.aokp.romcontrol.fragments.UserInterface"
        android:title="@string/general_ui"
        android:icon="@drawable/ic_rom_control_general_ui"
        android:summary="@string/header_summary_general_ui" />

    <header
        android:id="@+id/lockscreen"
        android:fragment="com.aokp.romcontrol.fragments.LockscreenSettingsFragment"
        android:title="@string/lockscreen_options"
        android:icon="@drawable/ic_rom_control_lockscreens"
        android:summary="@string/header_summary_lockscreens" />

    <header
        android:id="@+id/nav_bar"
        android:fragment="com.aokp.romcontrol.fragments.navbar.NavbarTab"
        android:title="@string/nav_bar"
        android:icon="@drawable/ic_rom_control_navigation_bar"
        android:summary="@string/header_summary_navigation_bar" />

    <header
        android:id="@+id/nav_ring"
        android:fragment="com.aokp.romcontrol.fragments.NavRingTargets"
        android:icon="@drawable/ic_rom_control_navigation_ring"
        android:title="@string/interface_navring_settings_title"
        android:summary="@string/interface_navring_settings_summary" />

    <header
        android:id="@+id/halo_settings"
        android:fragment="com.aokp.romcontrol.fragments.paranoid.Halo"
        android:icon="@drawable/ic_settings_halo" 
        android:title="@string/halo_settings_title" />
 
    <header
        android:id="@+id/ribbons"
        android:fragment="com.aokp.romcontrol.fragments.ribbons.RibbonsFragment"
        android:icon="@drawable/ic_rom_control_ribbon"
        android:title="@string/ribbon_settings_title"
        android:summary="@string/interface_ribbon_settings_summary"  />

    <header
        android:id="@+id/power_menu"
        android:fragment="com.aokp.romcontrol.fragments.PowerMenuSettingsFragment"
        android:title="@string/power_menu"
        android:icon="@drawable/ic_rom_control_power_menu"
        android:summary="@string/header_summary_power_menu" />
 
    <header
        android:id="@+id/animations_menu"
        android:fragment="com.aokp.romcontrol.fragments.AnimationsFragment"
        android:title="@string/category_animations"
        android:icon="@drawable/ic_rom_control_animations"
        android:summary="@string/header_summary_animations" />

    <header
        android:id="@+id/keyboard"
        android:fragment="com.aokp.romcontrol.fragments.Keyboard"
        android:icon="@drawable/ic_rom_control_keyboard"
        android:title="@string/keyboard_title" />

    <header
        android:title="@string/category_misc"
        android:fragment="com.aokp.romcontrol.fragments.Misc"
        android:icon="@drawable/ic_settings_xposed"
        android:summary="@string/header_summary_toggles" />

    <header
        android:id="@+id/statusbar"
        android:title="@string/header_statusbar" />

    <header
        android:fragment="com.aokp.romcontrol.fragments.StatusbarSettingsFragment"
        android:icon="@drawable/ic_rom_control_signal"
        android:summary="@string/header_summary_signal"
        android:title="@string/signal" />

    <header
        android:id="@+id/statusbar_battery"
        android:title="@string/battery"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarBattery"
        android:icon="@drawable/ic_rom_control_battery"
        android:summary="@string/header_summary_battery" />
        
    <header
        android:id="@+id/statusbar_clock"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarClock"
        android:summary="@string/header_summary_clock"
        android:icon="@drawable/ic_rom_control_clock"
        android:title="@string/clock" />

   	<header
        android:title="@string/toggles_layout"
        android:fragment="com.aokp.romcontrol.fragments.toggles.TogglesTab"
        android:icon="@drawable/ic_rom_control_quick_settings"
        android:summary="@string/header_summary_toggles" />

    <header
        android:id="@+id/system"
        android:title="@string/header_system" />

    <header
        android:title="@string/active_display_settings"
        android:fragment="com.aokp.romcontrol.fragments.chameleonos.ActiveDisplaySettings"
        android:icon="@drawable/ic_rom_settings_adisplay"
        android:summary="@string/header_summary_adsiplay" />

    <header
        android:id="@+id/user_interface"
        android:fragment="com.aokp.romcontrol.fragments.DensityChanger"
        android:title="@string/lcd_density_title"
        android:icon="@drawable/ic_rom_control_density_changer"/>

    <header
        android:id="@+id/init_d"
        android:title="@string/pt_init_d"
        android:summary="@string/ps_init_d"
        android:fragment="com.aokp.romcontrol.fragments.InitD"
        android:icon="@drawable/ic_rom_control_init_d"/>

    <header
        android:fragment="com.aokp.romcontrol.fragments.notificationlight.BatteryLightSettings"
        android:key="battery_light"
        android:title="@string/battery_light_title"
        android:icon="@drawable/ic_rom_control_led" />

    <header
        android:id="@+id/led"
        android:fragment="com.aokp.romcontrol.fragments.notificationlight.NotificationLightSettings"
        android:key="notification_pulse"
        android:title="@string/notification_pulse_title"
        android:icon="@drawable/ic_rom_control_led" />

    <header
        android:id="@+id/propmodder_initd"
        android:title="@string/propmodder_title"
        android:fragment="com.aokp.romcontrol.fragments.PropModder"
        android:summary="@string/propmodder_title_summary"
        android:icon="@drawable/ic_rom_control_propmodder" />

    <header
        android:id="@+id/wakelock_blocker"
        android:layout="@layout/preference_wakelockblocker"
        android:title="@string/wakelock_blocker"
        android:fragment="com.aokp.romcontrol.fragments.WakeLockBlocker"
        android:icon="@drawable/ic_settings_wakelock_blocker" />

    <header
        android:id="@+id/sound"
        android:fragment="com.aokp.romcontrol.fragments.Sound"
        android:title="@string/sound"
        android:icon="@drawable/ic_rom_control_sound"
        android:summary="@string/header_summary_sound" />

    <header
        android:id="@+id/vibrations"
        android:title="@string/vibrations"
        android:summary="@string/header_summary_vibrations"
        android:icon="@drawable/ic_rom_control_vibrations" >
        <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.aokp.romcontrol.fragments.Vibrations"
                android:targetPackage="com.aokp.romcontrol" />
    </header>
    
    <header android:title="@string/Extras" />
    <header
        android:id="@+id/lab_settings"
        android:fragment="com.aokp.romcontrol.fragments.chameleonos.labs.LabSettings"
        android:icon="@drawable/ic_settings_lab"
        android:title="@string/lab_settings_title" />

    <header
        android:id="@+id/about"
        android:fragment="com.aokp.romcontrol.fragments.About"
        android:title="@string/about_xehd"
        android:icon="@drawable/ic_rom_settings_about"
        android:summary="@string/about_xehd_summary" />
</preference-headers>
