<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="security"
            android:title="@string/lockscreen_security_cat">

        <CheckBoxPreference
            android:key="lockscreen_quick_unlock_control"
            android:title="@string/lockscreen_quick_unlock_control_title"
            android:summary="@string/lockscreen_quick_unlock_control_summary" />

    </PreferenceCategory>
	
	<PreferenceCategory
        android:key="targets"
        android:title="@string/custom_targets">
	<ListPreference
        android:entries="@array/lockscreen_target_amount_entries"
        android:entryValues="@array/lockscreen_target_amount_values"
        android:key="number_of_targets"
        android:title="@string/number_of_targets_title"
        android:summary="@string/number_of_targets_summary" />
    
	<Preference
        android:key="lockscreen_targets"
        android:summary="@string/lockscreen_target_summary"
        android:title="@string/lockscreen_target_title" />	
    </PreferenceCategory>
    
	<PreferenceCategory
        android:key="layout"
        android:title="@string/lockscreen_layout_cat">

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="lockscreen_text_color"
            android:title="@string/lockscreen_text_color_title"
            android:defaultValue="#ffffffff" />

        <CheckBoxPreference
            android:key="lockscreen_battery"
            android:title="@string/lockscreen_battery_title"
            android:summary="@string/lockscreen_battery_summary" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="misc"
            android:title="@string/misc_short">

            <CheckBoxPreference
                android:key="lockscreen_auto_rotate"
                android:title="@string/lockscreen_auto_rotate_title"
                android:summary="@string/lockscreen_auto_rotate_summary" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="lock_widgets"
            android:title="@string/lock_widgets_short">
            <CheckBoxPreference
                android:key="lockscreen_all_widgets"
                android:title="@string/lockscreen_all_widgets_title"
                android:summary="@string/lockscreen_all_widgets_summary" />

            <CheckBoxPreference
                android:key="lockscreen_unlimited_widgets"
                android:title="@string/lockscreen_unlimited_widgets_title"
                android:summary="@string/lockscreen_unlimited_widgets_summary" />

    </PreferenceCategory>
</PreferenceScreen>
