<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="notification"
        android:title="@string/notification_cat">

        <CheckBoxPreference
            android:title="@string/brightness_slider_title"
            android:summary="@string/brightness_slider_summary"
            android:key="statusbar_enable_brightness_slider"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc_short">

        <ListPreference
            android:key="screen_off_animation"
            android:title="@string/screen_off_animation"
            android:entries="@array/screen_off_animation_entries"
            android:entryValues="@array/screen_off_animation_values" />

        <ListPreference
            android:key="pref_low_battery_warning_policy"
            android:title="@string/pref_low_battery_warning_policy_title"
            android:dialogTitle="@string/pref_low_battery_warning_policy_dialog_title"
            android:entries="@array/pref_low_battery_warning_policy_entries"
            android:entryValues="@array/pref_low_battery_warning_policy_values"
            android:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>