<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/settingsFragmentStyle">

    <com.aokp.romcontrol.widgets.CategorySeparator
            style="@style/defaultSize"
            android:title="@string/category_statusbar_notification"/>

        <com.aokp.romcontrol.settings.CheckboxSetting
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:title="@string/vibrate_notif_expand_title"
            android:summary="@string/vibrate_notif_expand_summary"
            android:key="vibrate_notif_expand"
            android:defaultValue="true"
            />

    <com.aokp.romcontrol.widgets.CategorySeparator
            style="@style/defaultSize"
            android:title="@string/category_signalbars"/>

        <com.aokp.romcontrol.settings.CheckboxSetting
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:title="@string/statusbar_signal_text_title"
            android:summary="@string/statusbar_signal_text_summary"
            android:key="statusbar_signal_text"
            />

</LinearLayout>
