<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:aokp="http://schemas.android.com/apk/res/com.aokp.romcontrol">

	<PreferenceCategory
		android:key="aokp"
		android:title="@string/aokp">

		<Preference
			android:key="aokp_website"
			android:title="@string/aokp_website_title"
			android:summary="@string/aokp_website_summary" />

		<Preference
			android:key="aokp_source"
			android:title="@string/aokp_source_title"
			android:summary="@string/aokp_source_summary" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="devs"
		android:title="@string/devs">
		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="iceandfire"
			aokp:nameDev="iceandfire"
			aokp:twitterHandle="arhamjamal"
			aokp:donateLink="@string/donate" />

		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="Adam80460"
			aokp:nameDev="Adam80460"
			aokp:twitterHandle="adam80460" />
		
		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="TheBr0ken"
			aokp:nameDev="TheBr0ken"
			aokp:twitterHandle="TheBr0ken" />

		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="pr0xy man1Ac"
			aokp:nameDev="pr0xy man1Ac"
			aokp:twitterHandle="tr0nz420" />
			
		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="PCarenza"
			aokp:nameDev="PCarenza"
			aokp:twitterHandle="pcarenza" />
			
		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="T-Macgnolia"
			aokp:nameDev="T-Macgnolia"
			aokp:twitterHandle="tmacgnolia" />
	</PreferenceCategory>

</PreferenceScreen>
