<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aokp="http://schemas.android.com/apk/res/com.aokp.romcontrol" >

    <Preference
        android:key="toggles"
        android:title="@string/toggle_dialog_arrange_title" />

    <ListPreference
        android:title="@string/toggles_style_title"
            android:key="statusbar_toggles_style"
            android:entries="@array/setting_toggleStyles"
            android:entryValues="@array/setting_toggleStylesValues" />

    <ListPreference
        android:id="@+id/arrange_toggles"
        android:title="@string/toggles_order_title"
        android:summary="@string/toggles_order_summary"
            />

    <ListPreference
        android:id="@+id/enabled_toggles"
        android:title="@string/toggle_dialog_arrange_title"
        android:summary="@string/toggle_dialog_add_toggles"
            />

</PreferenceScreen>
