<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/settingsFragmentStyle">

    <com.aokp.romcontrol.widgets.CategorySeparator
            style="@style/defaultSize"
            android:title="@string/category_toggles"/>

    <ListPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/toggles_style"
            android:title="@string/toggles_style_title"
            android:key="statusbar_toggles_style"

            android:entries="@array/setting_toggleStyles"
            android:entryValues="@array/setting_toggleStylesValues"
            />

    <ListPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/enabled_toggles"
            android:title="@string/toggle_dialog_arrange_title"
            android:summary="@string/toggle_dialog_add_toggles"
            />

    <ListPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/arrange_toggles"
            android:title="@string/toggles_order_title"
            android:summary="@string/toggles_order_summary"
            />

    <ListPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/toggles_per_row"
            android:title="@string/toggles_per_row_title"
            android:key="statusbar_toggles_number_per_row"

            android:entries="@array/setting_togglesPerRow"
            android:entryValues="@array/setting_togglesPerRowValues"
            />

</LinearLayout>
