<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2013, The Android Open Kang Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout style="@style/settingsFragmentStyle">

        <com.aokp.romcontrol.widgets.CategorySeparator
            style="@style/defaultSize"
            android:title="@string/category_sound"/>

        <com.aokp.romcontrol.settings.CheckboxSetting
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/safe_headset_volume_title"
            android:summary="@string/safe_headset_volume_summary"
            android:key="manual_safe_media_volume"
            android:defaultValue="true"
            />

        <com.aokp.romcontrol.widgets.CategorySeparator
            style="@style/defaultSize"
            android:title="@string/ram_bar_title"/>

        <com.aokp.romcontrol.settings.CheckboxSetting
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:title="@string/ram_bar_title"
            android:summary="@string/ram_bar_summary"
            android:key="ram_usage_bar"
            android:defaultValue="true"
            />

        <com.aokp.romcontrol.widgets.CategorySeparator
            style="@style/defaultSize"
            android:title="@string/quicksettings_tiles_style_additional_options"/>

        <com.aokp.romcontrol.settings.SingleChoiceSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quick_tiles_per_row"
                android:key="quick_tiles_per_row"
                android:title="@string/battery_status_icon_title"
                android:entries="@array/tiles_per_row_entries"
                android:entryValues="@array/tiles_per_row_values" 
                table="system"
                android:defaultValue="5" />

        <com.aokp.romcontrol.settings.CheckboxSetting
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:title="@string/quick_tiles_per_row_duplicate_landscape_title"
            android:summary="@string/quick_tiles_per_row_duplicate_landscape_summary"
            android:key="quick_tiles_per_row_duplicate_landscape"
            android:defaultValue="true"
            />

    </LinearLayout>

</ScrollView>
