<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/settingsFragmentStyle">

    <com.aokp.romcontrol.widgets.CategorySeparator
                style="@style/defaultSize"
                android:title="@string/category_statusbar_battery"/>

        <com.aokp.romcontrol.settings.CheckboxSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/battery_percentage_indicator"
                android:title="@string/battery_percentage_indicator_title"
                android:summary="@string/battery_percentage_indicator_summary"
                android:key="battery_percentage_indicator"
                android:defaultValue="false"
                />

        <com.aokp.romcontrol.settings.CheckboxSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/battery_percentage_indicator_plugged"
                android:title="@string/battery_percentage_indicator_plugged_title"
                android:summary="@string/battery_percentage_indicator_plugged_summary"
                android:key="battery_percentage_indicator_plugged"
                android:defaultValue="false"
                />

        <com.aokp.romcontrol.settings.SingleChoiceSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setting_status_bar_battery_style"
                android:key="status_bar_battery_style"
                android:title="@string/battery_status_icon_title"
                android:entries="@array/entries_battery_submenu"
                android:entryValues="@array/values_battery_submenu" 
                table="system"
                android:defaultValue="1" />


</LinearLayout>
